{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 168,
  "lineage": "330bffd3-a258-8de2-02ff-41cf5ab49138",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:897722705454:loadbalancer/app/laravel-api-dev-alb/cbdcfbc964606d59",
            "arn_suffix": "app/laravel-api-dev-alb/cbdcfbc964606d59",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "laravel-api-dev-alb-1928985986.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:897722705454:loadbalancer/app/laravel-api-dev-alb/cbdcfbc964606d59",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "laravel-api-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d0f1b972a1bc35fa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0048be8aebaf388c5"
              },
              {
                "subnet_id": "subnet-03118d96767deeb0d"
              },
              {
                "subnet_id": "subnet-04a2de7fdf2642ca2"
              },
              {
                "subnet_id": "subnet-09d7a92a9e3debef7"
              },
              {
                "subnet_id": "subnet-0ca3df3fd9cbe8225"
              },
              {
                "subnet_id": "subnet-0ee87246f6b700cab"
              }
            ],
            "subnets": [
              "subnet-0048be8aebaf388c5",
              "subnet-03118d96767deeb0d",
              "subnet-04a2de7fdf2642ca2",
              "subnet-09d7a92a9e3debef7",
              "subnet-0ca3df3fd9cbe8225",
              "subnet-0ee87246f6b700cab"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-alb",
              "Project": "laravel-api",
              "Type": "load-balancer"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-alb",
              "Project": "laravel-api",
              "Type": "load-balancer"
            },
            "vpc_id": "vpc-08082223053934ea8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:897722705454:listener/app/laravel-api-dev-alb/cbdcfbc964606d59/410676a83e017f64",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:897722705454:targetgroup/laravel-api-dev-tg/75c627076f3cb8dc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:897722705454:listener/app/laravel-api-dev-alb/cbdcfbc964606d59/410676a83e017f64",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:897722705454:loadbalancer/app/laravel-api-dev-alb/cbdcfbc964606d59",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-http-listener",
              "Project": "laravel-api"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-http-listener",
              "Project": "laravel-api"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:897722705454:targetgroup/laravel-api-dev-tg/75c627076f3cb8dc",
            "arn_suffix": "targetgroup/laravel-api-dev-tg/75c627076f3cb8dc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/ping",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:897722705454:targetgroup/laravel-api-dev-tg/75c627076f3cb8dc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:897722705454:loadbalancer/app/laravel-api-dev-alb/cbdcfbc964606d59"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "laravel-api-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-tg",
              "Project": "laravel-api",
              "Type": "target-group"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-tg",
              "Project": "laravel-api",
              "Type": "target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:security-group/sg-0d0f1b972a1bc35fa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0f1b972a1bc35fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "laravel-api-dev-alb-2025090710165752220000000d",
            "name_prefix": "laravel-api-dev-alb-",
            "owner_id": "897722705454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-alb-sg",
              "Project": "laravel-api",
              "Type": "alb"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-alb-sg",
              "Project": "laravel-api",
              "Type": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-08082223053934ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:internet-gateway/igw-0eb3a681334a9c01f",
            "id": "igw-0eb3a681334a9c01f",
            "owner_id": "897722705454",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-igw",
              "Project": "laravel-api"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-igw",
              "Project": "laravel-api"
            },
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-09f9d64fb87665f22",
            "id": "rtb-09f9d64fb87665f22",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-rt-1",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-rt-1",
              "Project": "laravel-api",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08082223053934ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-0260fb9f3fa2d35c1",
            "id": "rtb-0260fb9f3fa2d35c1",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-rt-2",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-rt-2",
              "Project": "laravel-api",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08082223053934ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-0c714339a7f1c395f",
            "id": "rtb-0c714339a7f1c395f",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-rt-3",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-rt-3",
              "Project": "laravel-api",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08082223053934ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-0b6696eb77ab38c46",
            "id": "rtb-0b6696eb77ab38c46",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-rt-4",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-rt-4",
              "Project": "laravel-api",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08082223053934ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-0d2794e0ecfc7806b",
            "id": "rtb-0d2794e0ecfc7806b",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-rt-5",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-rt-5",
              "Project": "laravel-api",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08082223053934ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-01f7fb78a2cbaba58",
            "id": "rtb-01f7fb78a2cbaba58",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-rt-6",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-rt-6",
              "Project": "laravel-api",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08082223053934ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:route-table/rtb-0027f29ba77358575",
            "id": "rtb-0027f29ba77358575",
            "owner_id": "897722705454",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb3a681334a9c01f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-rt",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-rt",
              "Project": "laravel-api",
              "Type": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08082223053934ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03530fcd5d23dc66c",
            "route_table_id": "rtb-09f9d64fb87665f22",
            "subnet_id": "subnet-0fd60b7f1b751dc9d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a915e0d797aa495",
            "route_table_id": "rtb-0260fb9f3fa2d35c1",
            "subnet_id": "subnet-06139fdf0158cd00c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e119ee707450c398",
            "route_table_id": "rtb-0c714339a7f1c395f",
            "subnet_id": "subnet-09391fb2ea5c8c0ce"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06476e99d35560296",
            "route_table_id": "rtb-0b6696eb77ab38c46",
            "subnet_id": "subnet-043f4cea6c4c2efdb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5349d360157d649",
            "route_table_id": "rtb-0d2794e0ecfc7806b",
            "subnet_id": "subnet-06f8c6a150973ba14"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d94b22e427961b72",
            "route_table_id": "rtb-01f7fb78a2cbaba58",
            "subnet_id": "subnet-0b4d71a667906dd69"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046fd970cf1ae50a3",
            "route_table_id": "rtb-0027f29ba77358575",
            "subnet_id": "subnet-0ee87246f6b700cab"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082a466a9c9f6581f",
            "route_table_id": "rtb-0027f29ba77358575",
            "subnet_id": "subnet-0ca3df3fd9cbe8225"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0367841ae39f2c97a",
            "route_table_id": "rtb-0027f29ba77358575",
            "subnet_id": "subnet-03118d96767deeb0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a84fac4bd9fdd983",
            "route_table_id": "rtb-0027f29ba77358575",
            "subnet_id": "subnet-04a2de7fdf2642ca2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e725cd64310afb24",
            "route_table_id": "rtb-0027f29ba77358575",
            "subnet_id": "subnet-09d7a92a9e3debef7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e81836e024fe8ee",
            "route_table_id": "rtb-0027f29ba77358575",
            "subnet_id": "subnet-0048be8aebaf388c5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:security-group/sg-0a5601f6808c5d126",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5601f6808c5d126",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "laravel-api-dev-alb-20250907101653608800000009",
            "name_prefix": "laravel-api-dev-alb-",
            "owner_id": "897722705454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-alb-sg",
              "Project": "laravel-api",
              "Type": "alb"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-alb-sg",
              "Project": "laravel-api",
              "Type": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-08082223053934ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:security-group/sg-0df0163a89a272835",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-0df0163a89a272835",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "laravel-api-dev-ecs-20250907101652377100000007",
            "name_prefix": "laravel-api-dev-ecs-",
            "owner_id": "897722705454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-ecs-sg",
              "Project": "laravel-api",
              "Type": "ecs"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-ecs-sg",
              "Project": "laravel-api",
              "Type": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-08082223053934ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:security-group/sg-067925327eef72043",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067925327eef72043",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0df0163a89a272835"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "laravel-api-dev-rds-20250907101700239400000013",
            "name_prefix": "laravel-api-dev-rds-",
            "owner_id": "897722705454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-rds-sg",
              "Project": "laravel-api",
              "Type": "rds"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-rds-sg",
              "Project": "laravel-api",
              "Type": "rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-08082223053934ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:security-group/sg-0ffabae49b876b118",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffabae49b876b118",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0df0163a89a272835"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "laravel-api-dev-redis-20250907101700443700000014",
            "name_prefix": "laravel-api-dev-redis-",
            "owner_id": "897722705454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-redis-sg",
              "Project": "laravel-api",
              "Type": "redis"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-redis-sg",
              "Project": "laravel-api",
              "Type": "redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-08082223053934ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:security-group/sg-0c4b5c03f921597bb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4b5c03f921597bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "laravel-api-dev-vpc-endpoint-20250907101644944500000005",
            "name_prefix": "laravel-api-dev-vpc-endpoint-",
            "owner_id": "897722705454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-vpc-endpoint-sg",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-vpc-endpoint-sg",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "timeouts": null,
            "vpc_id": "vpc-08082223053934ea8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-0fd60b7f1b751dc9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd60b7f1b751dc9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-subnet-1",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-subnet-1",
              "Project": "laravel-api",
              "Type": "private"
            },
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-06139fdf0158cd00c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06139fdf0158cd00c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-subnet-2",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-subnet-2",
              "Project": "laravel-api",
              "Type": "private"
            },
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-09391fb2ea5c8c0ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09391fb2ea5c8c0ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-subnet-3",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-subnet-3",
              "Project": "laravel-api",
              "Type": "private"
            },
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-043f4cea6c4c2efdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043f4cea6c4c2efdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-subnet-4",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-subnet-4",
              "Project": "laravel-api",
              "Type": "private"
            },
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-06f8c6a150973ba14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f8c6a150973ba14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-subnet-5",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-subnet-5",
              "Project": "laravel-api",
              "Type": "private"
            },
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-0b4d71a667906dd69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.15.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4d71a667906dd69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-private-subnet-6",
              "Project": "laravel-api",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-private-subnet-6",
              "Project": "laravel-api",
              "Type": "private"
            },
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-0ee87246f6b700cab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee87246f6b700cab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-subnet-1",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-subnet-1",
              "Project": "laravel-api",
              "Type": "public"
            },
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-0ca3df3fd9cbe8225",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca3df3fd9cbe8225",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-subnet-2",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-subnet-2",
              "Project": "laravel-api",
              "Type": "public"
            },
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-03118d96767deeb0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03118d96767deeb0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-subnet-3",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-subnet-3",
              "Project": "laravel-api",
              "Type": "public"
            },
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-04a2de7fdf2642ca2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a2de7fdf2642ca2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-subnet-4",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-subnet-4",
              "Project": "laravel-api",
              "Type": "public"
            },
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-09d7a92a9e3debef7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d7a92a9e3debef7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-subnet-5",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-subnet-5",
              "Project": "laravel-api",
              "Type": "public"
            },
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:subnet/subnet-0048be8aebaf388c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0048be8aebaf388c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722705454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-public-subnet-6",
              "Project": "laravel-api",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-public-subnet-6",
              "Project": "laravel-api",
              "Type": "public"
            },
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:vpc/vpc-08082223053934ea8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b4179abd1f2f401d",
            "default_route_table_id": "rtb-05c7c357b6cc633f0",
            "default_security_group_id": "sg-04bae6589704fee6a",
            "dhcp_options_id": "dopt-01ee8dff27f5d751d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08082223053934ea8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c7c357b6cc633f0",
            "owner_id": "897722705454",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-vpc",
              "Project": "laravel-api"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-vpc",
              "Project": "laravel-api"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:vpc-endpoint/vpce-0cf57c93f7ef0def7",
            "dns_entry": [
              {
                "dns_name": "vpce-0cf57c93f7ef0def7-1bzvvqec.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cf57c93f7ef0def7-1bzvvqec-us-east-1d.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cf57c93f7ef0def7-1bzvvqec-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cf57c93f7ef0def7-1bzvvqec-us-east-1f.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cf57c93f7ef0def7-1bzvvqec-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cf57c93f7ef0def7-1bzvvqec-us-east-1e.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cf57c93f7ef0def7-1bzvvqec-us-east-1c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0396639KMP0AHA90HUX"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z0025717103J71PYSDHYO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cf57c93f7ef0def7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02b4670069a6827f2",
              "eni-03f8ba87854d9f3eb",
              "eni-055d02f22e10480e7",
              "eni-0678967c2bd83d6b0",
              "eni-08e4dd732c7ec37b4",
              "eni-0af28deb9dd99ee61"
            ],
            "owner_id": "897722705454",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c4b5c03f921597bb"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.150",
                "subnet_id": "subnet-0fd60b7f1b751dc9d"
              },
              {
                "ipv4": "10.0.11.221",
                "subnet_id": "subnet-06139fdf0158cd00c"
              },
              {
                "ipv4": "10.0.12.251",
                "subnet_id": "subnet-09391fb2ea5c8c0ce"
              },
              {
                "ipv4": "10.0.13.217",
                "subnet_id": "subnet-043f4cea6c4c2efdb"
              },
              {
                "ipv4": "10.0.14.163",
                "subnet_id": "subnet-06f8c6a150973ba14"
              },
              {
                "ipv4": "10.0.15.216",
                "subnet_id": "subnet-0b4d71a667906dd69"
              }
            ],
            "subnet_ids": [
              "subnet-043f4cea6c4c2efdb",
              "subnet-06139fdf0158cd00c",
              "subnet-06f8c6a150973ba14",
              "subnet-09391fb2ea5c8c0ce",
              "subnet-0b4d71a667906dd69",
              "subnet-0fd60b7f1b751dc9d"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-ecr-api-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-ecr-api-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:vpc-endpoint/vpce-02c4ae89f582c4a45",
            "dns_entry": [
              {
                "dns_name": "vpce-02c4ae89f582c4a45-jixh9t3d.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02c4ae89f582c4a45-jixh9t3d-us-east-1f.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02c4ae89f582c4a45-jixh9t3d-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02c4ae89f582c4a45-jixh9t3d-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02c4ae89f582c4a45-jixh9t3d-us-east-1d.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02c4ae89f582c4a45-jixh9t3d-us-east-1c.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02c4ae89f582c4a45-jixh9t3d-us-east-1e.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0026233QG7OXJYAGGDE"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0026233QG7OXJYAGGDE"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z00257181N0YNGTM7IPDX"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z00257181N0YNGTM7IPDX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02c4ae89f582c4a45",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-009de5b93562c9fa6",
              "eni-03eab8c0adead1318",
              "eni-0429909e0534c857b",
              "eni-065920a20a2474dff",
              "eni-07aba9f336901eaa2",
              "eni-0ec759b516fc166d5"
            ],
            "owner_id": "897722705454",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c4b5c03f921597bb"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.221",
                "subnet_id": "subnet-0fd60b7f1b751dc9d"
              },
              {
                "ipv4": "10.0.11.166",
                "subnet_id": "subnet-06139fdf0158cd00c"
              },
              {
                "ipv4": "10.0.12.182",
                "subnet_id": "subnet-09391fb2ea5c8c0ce"
              },
              {
                "ipv4": "10.0.13.212",
                "subnet_id": "subnet-043f4cea6c4c2efdb"
              },
              {
                "ipv4": "10.0.14.150",
                "subnet_id": "subnet-06f8c6a150973ba14"
              },
              {
                "ipv4": "10.0.15.228",
                "subnet_id": "subnet-0b4d71a667906dd69"
              }
            ],
            "subnet_ids": [
              "subnet-043f4cea6c4c2efdb",
              "subnet-06139fdf0158cd00c",
              "subnet-06f8c6a150973ba14",
              "subnet-09391fb2ea5c8c0ce",
              "subnet-0b4d71a667906dd69",
              "subnet-0fd60b7f1b751dc9d"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-ecr-dkr-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-ecr-dkr-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:vpc-endpoint/vpce-0f48e2777f731c84e",
            "dns_entry": [
              {
                "dns_name": "vpce-0f48e2777f731c84e-spmnabjq.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f48e2777f731c84e-spmnabjq-us-east-1d.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f48e2777f731c84e-spmnabjq-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f48e2777f731c84e-spmnabjq-us-east-1f.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f48e2777f731c84e-spmnabjq-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f48e2777f731c84e-spmnabjq-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f48e2777f731c84e-spmnabjq-us-east-1e.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04056973HIH2KW0UPMF9"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z090909022RRB5EXLTJLJ"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0405707LZPCXNACB2DC"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z040570012BQZY8NZ98RN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f48e2777f731c84e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02847bec90081d56e",
              "eni-02982992424bd8bf1",
              "eni-0595193e24d3587c8",
              "eni-08eae0978671557c0",
              "eni-0a63d9220b927104a",
              "eni-0d081b2966decbcc3"
            ],
            "owner_id": "897722705454",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c4b5c03f921597bb"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.164",
                "subnet_id": "subnet-0fd60b7f1b751dc9d"
              },
              {
                "ipv4": "10.0.11.143",
                "subnet_id": "subnet-06139fdf0158cd00c"
              },
              {
                "ipv4": "10.0.12.8",
                "subnet_id": "subnet-09391fb2ea5c8c0ce"
              },
              {
                "ipv4": "10.0.13.146",
                "subnet_id": "subnet-043f4cea6c4c2efdb"
              },
              {
                "ipv4": "10.0.14.213",
                "subnet_id": "subnet-06f8c6a150973ba14"
              },
              {
                "ipv4": "10.0.15.35",
                "subnet_id": "subnet-0b4d71a667906dd69"
              }
            ],
            "subnet_ids": [
              "subnet-043f4cea6c4c2efdb",
              "subnet-06139fdf0158cd00c",
              "subnet-06f8c6a150973ba14",
              "subnet-09391fb2ea5c8c0ce",
              "subnet-0b4d71a667906dd69",
              "subnet-0fd60b7f1b751dc9d"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-logs-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-logs-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:vpc-endpoint/vpce-013c0e2973352c472",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-013c0e2973352c472",
            "owner_id": "897722705454",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01f7fb78a2cbaba58",
              "rtb-0260fb9f3fa2d35c1",
              "rtb-09f9d64fb87665f22",
              "rtb-0b6696eb77ab38c46",
              "rtb-0c714339a7f1c395f",
              "rtb-0d2794e0ecfc7806b"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-s3-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-s3-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722705454:vpc-endpoint/vpce-067bcc6c11947a182",
            "dns_entry": [
              {
                "dns_name": "vpce-067bcc6c11947a182-zp34r9ja.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-067bcc6c11947a182-zp34r9ja-us-east-1f.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-067bcc6c11947a182-zp34r9ja-us-east-1d.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-067bcc6c11947a182-zp34r9ja-us-east-1e.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-067bcc6c11947a182-zp34r9ja-us-east-1c.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-067bcc6c11947a182-zp34r9ja-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-067bcc6c11947a182-zp34r9ja-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z040621017RAUU4QS8ME7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-067bcc6c11947a182",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04c482d2597c489f5",
              "eni-066ae48052b3fd59f",
              "eni-08adbf6a4d7c31c4c",
              "eni-099450bd5130182e9",
              "eni-0ec9c66ab4d721e79",
              "eni-0fd844f7593244a2b"
            ],
            "owner_id": "897722705454",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c4b5c03f921597bb"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.132",
                "subnet_id": "subnet-0fd60b7f1b751dc9d"
              },
              {
                "ipv4": "10.0.11.125",
                "subnet_id": "subnet-06139fdf0158cd00c"
              },
              {
                "ipv4": "10.0.12.192",
                "subnet_id": "subnet-09391fb2ea5c8c0ce"
              },
              {
                "ipv4": "10.0.13.187",
                "subnet_id": "subnet-043f4cea6c4c2efdb"
              },
              {
                "ipv4": "10.0.14.12",
                "subnet_id": "subnet-06f8c6a150973ba14"
              },
              {
                "ipv4": "10.0.15.38",
                "subnet_id": "subnet-0b4d71a667906dd69"
              }
            ],
            "subnet_ids": [
              "subnet-043f4cea6c4c2efdb",
              "subnet-06139fdf0158cd00c",
              "subnet-06f8c6a150973ba14",
              "subnet-09391fb2ea5c8c0ce",
              "subnet-0b4d71a667906dd69",
              "subnet-0fd60b7f1b751dc9d"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "laravel-api-dev-secretsmanager-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "tags_all": {
              "CreatedBy": "Cloud Team",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "laravel-api-dev-secretsmanager-endpoint",
              "Project": "laravel-api",
              "Type": "vpc-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08082223053934ea8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}